packages/dartcv/lib/src/g/stitching.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:dartcv4/dartcv.dart')
library;

import 'dart:ffi' as ffi;
import 'package:dartcv4/src/g/types.g.dart' as imp$1;
import 'package:meta/meta.dart' as meta;
import '' as self;

@meta.RecordUse()
@ffi.Native<ffi.Void Function(StitcherPtr)>()
external void cv_Stitcher_close(
  StitcherPtr stitcher,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<VecI32>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_component(
  Stitcher self$1,
  ffi.Pointer<VecI32> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, Mat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_composePanorama(
  Stitcher self$1,
  Mat rpano,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, VecMat, Mat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_composePanorama_1(
  Stitcher self$1,
  VecMat mats,
  Mat rpano,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Pointer<Stitcher>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_create(
  int mode,
  ffi.Pointer<Stitcher> rval,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(Stitcher, VecMat, VecMat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)
>()
external ffi.Pointer<CvStatus> cv_Stitcher_estimateTransform(
  Stitcher self$1,
  VecMat mats,
  VecMat masks,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(Stitcher)>()
external double cv_Stitcher_get_compositingResol(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Int Function(Stitcher)>()
external int cv_Stitcher_get_interpolationFlags(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(Stitcher)>()
external double cv_Stitcher_get_panoConfidenceThresh(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(Stitcher)>()
external double cv_Stitcher_get_registrationResol(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(Stitcher)>()
external double cv_Stitcher_get_seamEstimationResol(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Int Function(Stitcher)>()
external int cv_Stitcher_get_waveCorrectKind(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Bool Function(Stitcher)>()
external bool cv_Stitcher_get_waveCorrection(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Double)>()
external void cv_Stitcher_set_compositingResol(
  Stitcher self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Int)>()
external void cv_Stitcher_set_interpolationFlags(
  Stitcher self$1,
  int val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Double)>()
external void cv_Stitcher_set_panoConfidenceThresh(
  Stitcher self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Double)>()
external void cv_Stitcher_set_registrationResol(
  Stitcher self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Double)>()
external void cv_Stitcher_set_seamEstimationResol(
  Stitcher self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Int)>()
external void cv_Stitcher_set_waveCorrectKind(
  Stitcher self$1,
  int val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Bool)>()
external void cv_Stitcher_set_waveCorrection(
  Stitcher self$1,
  bool val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, VecMat, Mat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_stitch(
  Stitcher self$1,
  VecMat mats,
  Mat rpano,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(Stitcher, VecMat, VecMat, Mat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)
>()
external ffi.Pointer<CvStatus> cv_Stitcher_stitch_1(
  Stitcher self$1,
  VecMat mats,
  VecMat masks,
  Mat rpano,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

const addresses = _SymbolAddresses();

class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(StitcherPtr)>> get cv_Stitcher_close =>
      ffi.Native.addressOf(self.cv_Stitcher_close);
}

typedef CvStatus = imp$1.CvStatus;
typedef Mat = imp$1.Mat;

const int STITCHING_ERR_CAMERA_PARAMS_ADJUST_FAIL = 3;

const int STITCHING_ERR_HOMOGRAPHY_EST_FAIL = 2;

const int STITCHING_ERR_NEED_MORE_IMGS = 1;

const int STITCHING_OK = 0;

const int STITCHING_PANORAMA = 0;

const int STITCHING_SCANS = 1;

final class Stitcher extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<ffi.Void>> ptr;

  static ffi.Pointer<Stitcher> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Pointer<ffi.Void>> ptr,
  }) => $allocator<Stitcher>()..ref.ptr = ptr;
}

typedef StitcherPtr = ffi.Pointer<Stitcher>;
typedef VecI32 = imp$1.VecI32;
typedef VecMat = imp$1.VecMat;
